Blackpurl/src/objects/Deal_Item__c.object
<CustomObject>
    <description>Junction between deal and unit</description>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time__c</fullName>
        <label>Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Response__c</fullName>
        <label>Accounting Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Cash_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Actual Cash Value</description>
        <label>Actual Cash Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Value_Taxable_Amount__c</fullName>
        <description>Agreed value after limiting sales tax amount on Trad in which is to ensure that the sales tax credit for the trades does not exceed the sales tax calculated on the units.</description>
        <label>Agreed Value Taxable Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Value__c</fullName>
        <description>Agreed Value</description>
        <label>Agreed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appraisal_Method__c</fullName>
        <description>Appraisal Method</description>
        <label>Appraisal Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visual</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Notes__c</fullName>
        <description>Appraisal Notes</description>
        <label>Appraisal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appraisal_Status__c</fullName>
        <description>Appraisal Status</description>
        <label>Appraisal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Appraisal</fullName>
                </value>
                <value>
                    <fullName>Appraisal Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approved By</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avail_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avail For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>Exterior Colour of unit</description>
        <label>Exterior Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to cou</description>
        <label>Customer Owned Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deals_Units_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <formula>IF(ISPICKVAL(Deal__r.Status__c, &quot;Invoiced&quot;), Deal__r.Invoice_Number__r.Invoice_Date_Formula__c, TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Option_Total__c</fullName>
        <label>Dealer Option Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Unit_Sales_Tax_Percentage__c</fullName>
        <label>Default Unit Sales Tax Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Markup_From_Prive_Level__c</fullName>
        <formula>Deal__r.CO_Header__r.Discount_Markup_From_Prive_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount-Markup From Prive Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Factory_Option_Total__c</fullName>
        <label>Factory Option Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Total__c</fullName>
        <label>Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is related to lien payout for Trade-Ins</description>
        <inlineHelpText>This is related to lien payout for Trade-Ins</inlineHelpText>
        <label>Finance Company (Lien Payout)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Override_Stamp_Duty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Override Stamp Duty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rideaway_Pricing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rideaway Pricing Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Stocked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is COU is stocked in</description>
        <label>Is Stocked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labour_Rate_From_Price_Level__c</fullName>
        <formula>Deal__r.CO_Header__r.Labour_Rate_From_Price_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Rate From Price Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Total__c</fullName>
        <label>Labour Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Accounting_Id__c</fullName>
        <label>Lien Payout Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Accounting_Last_Sync_Time__c</fullName>
        <label>Lien Payout Accounting Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Accounting_Response__c</fullName>
        <label>Lien Payout Accounting Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Avail_For_QB_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lien Payout Avail For QB Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Avail_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lien Payout Avail For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Sync_Token__c</fullName>
        <label>Lien Payout Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Payout_Xero_Accounting_Id__c</fullName>
        <label>Lien Payout Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Payout__c</fullName>
        <label>Lien Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_And_Fee_Status__c</fullName>
        <label>Option And Fee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uncommitted</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Fullfill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Product_Total__c</fullName>
        <label>Other Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Price_Base_From_Price_Level__c</fullName>
        <formula>Deal__r.CO_Header__r.Part_Price_Base_From_Price_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Price Base From Price Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Total__c</fullName>
        <label>Part Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Agreed_Value__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , ( Agreed_Value__c / ( 1 + Default_Unit_Sales_Tax_Percentage__c ) ), Agreed_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Agreed Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rideaway_Pricing_Total__c</fullName>
        <label>Rideaway Pricing Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stamp_Duty_Total__c</fullName>
        <label>Stamp Duty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stocked_In_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stocked In Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Deals Items (Stocked In Unit)</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Model</label>
        <referenceTo>Unit_Sub_Model__c</referenceTo>
        <relationshipLabel>Deals Items</relationshipLabel>
        <relationshipName>Deals_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sublet_Total__c</fullName>
        <label>Sublet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submodel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub model of unit</description>
        <label>SubModel</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Deal Items (Submodel)</relationshipLabel>
        <relationshipName>Deal_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_Token__c</fullName>
        <label>Sync Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>IF( $Setup.Configurations__c.Tax_Included_Pricing__c , ( Agreed_Value__c - ( Agreed_Value__c / ( 1 + Default_Unit_Sales_Tax_Percentage__c) ) ), Agreed_Value__c * Default_Unit_Sales_Tax_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Base_Price__c + Factory_Option_Total__c + Dealer_Option_Total__c + Part_Total__c + Labour_Total__c + Sublet_Total__c + Warranty_Product_Total__c + Other_Product_Total__c + Fee_Total__c + Stamp_Duty_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trade In</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Make of unit</description>
        <label>Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model of unit</description>
        <label>Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Deal Items</relationshipLabel>
        <relationshipName>Deal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Product_Total__c</fullName>
        <label>Warranty Product Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xero_Accounting_Id__c</fullName>
        <label>Xero Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Model year of the unit</description>
        <label>Unit Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Deal Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>